--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@ button, select, input, textarea {
     <select id="timeMode" onchange="resetTestState()">
       <option value="60">1 Minute</option>
       <option value="120">2 Minutes</option>
+      <option value="180">3 Minutes</option>
       <option value="300">5 Minutes</option>
       <option value="600">10 Minutes</option>
     </select>
