--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@ button, select, input, textarea {
       <option value="180">3 Minutes</option>
       <option value="300">5 Minutes</option>
       <option value="600">10 Minutes</option>
+      <option value="900">15 Minutes</option>
+      <option value="1800">30 Minutes</option>
     </select>
   </div>
 
