Update button text for contribution

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ button, select, input, textarea {
       <optgroup label="Approved Globally" id="approvedGroup"></optgroup>
       <optgroup label="Your Favorites" id="favGroup"></optgroup>
     </select>
-    <button class="btn-pill btn-orange" onclick="openContribute()">Add your text!</button>
+    <button class="btn-pill btn-orange" onclick="openContribute()">Contribute (Share your text!)</button>
     <button class="btn-pill btn-brown" onclick="supportDeveloper()">support developer ₹</button>
   </div>
 
